# opengl_template

./: .gitignore  CMakeLists.txt  README.md
include/: temp.h
shaders/: shader.vert
src/: glad.c  main.cpp
